--- a/index.html
+++ b/index.html
@@ -60,24 +60,27 @@
     <!-- home section -->
     <section id="home" class="home">
       <div class="home-content" data-aos="fade-up" data-aos-duration="1000">
-        <h1>Olá,</h1>
-        <h1>Eu sou <span>Bruno Henrique</span></h1>
-        <div id="typed-strings">
-          <h1>Desenvolvedor Front-End.</h1>
-          <h1>Analista de Dados.</h1>
+        <div class="home-content-elements">
+          <h1>Olá,</h1>
+          <h1>Eu sou <span>Bruno Henrique</span></h1>
+          <div id="typed-strings">
+            <h1>Desenvolvedor Front-End.</h1>
+            <h1>Analista de Dados.</h1>
+          </div>
+          <span id="typed"></span>
+          <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="60">
+            "O coração do sábio adquire o conhecimento, <br />e o ouvido dos
+            sábios procura o saber." <br />
+            <span>Provérbios</span> 18:15
+          </p>
+          <div class="home-btns" data-aos="fade-up" data-aos-duration="2200">
+            <a href="./doc/Curriculo.pdf" class="btn" download="Curriculo.pdf"
+              >Download CV</a
+            >
+            <a href="#contact" class="contact-btn">Contato Info</a>
+          </div>
         </div>
-        <span id="typed"></span>
-        <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="60">
-          "O coração do sábio adquire o conhecimento, <br />e o ouvido dos
-          sábios procura o saber." <br />
-          <span>Provérbios</span> 18:15
-        </p>
-        <div class="home-btns" data-aos="fade-up" data-aos-duration="2200">
-          <a href="./doc/Curriculo.pdf" class="btn" download="Curriculo.pdf"
-            >Download CV</a
-          >
-          <a href="#contact" class="contact-btn">Contact Info</a>
-        </div>
+
       </div>
 
       <div class="home-img" data-aos="fade-up" data-aos-duration="1500">
@@ -487,14 +490,26 @@
     <!-- contact section -->
 
     <footer>
-      <h5>&copy; Bruno Henrique.</h5>
-      <a
-        href="https://wa.me/5534996560351?text=Olá,+tenho+interesse+em+seus+produtos!"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        <i class="bx bxl-whatsapp"></i>
-      </a>
+      <div class="footer-title">
+        &copy;<h3> Bruno Henrique.</h3>
+      </div>
+
+      <div class="footer-links">
+
+        <a href="https://github.com/hennriquee" target="_blank">
+          <i class='bx bxl-github'></i>
+        </a>
+  
+        <a
+          href="https://wa.me/5534996560351?text=Olá,+me+interessei+em+seu+trabalho!"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="bx bxl-whatsapp"></i>
+        </a>
+      </div>
+
+
     </footer>
 
     <!-- SCROLL EFFECT -->
