--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@
         <div class="home-content-elements">
           <h1>Olá,</h1>
           <h1>Eu sou <span>Bruno Henrique</span></h1>
-          <div id="typed-strings">
-            <h1>Desenvolvedor Front-End.</h1>
-            <h1>Analista de Dados.</h1>
+          <div class="typed-container">
+            <div id="typed-strings">
+              <h1>Desenvolvedor Front-End.</h1>
+              <h1>Analista de Dados.</h1>
+            </div>
+            <span id="typed"></span>
           </div>
-          <span id="typed"></span>
           <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="60">
             "O coração do sábio adquire o conhecimento, <br />e o ouvido dos
             sábios procura o saber." <br />
@@ -80,7 +82,6 @@
             <a href="#contact" class="contact-btn">Contato Info</a>
           </div>
         </div>
-
       </div>
 
       <div class="home-img" data-aos="fade-up" data-aos-duration="1500">
@@ -491,15 +492,15 @@
 
     <footer>
       <div class="footer-title">
-        &copy;<h3> Bruno Henrique.</h3>
+        &copy;
+        <h3>Bruno Henrique.</h3>
       </div>
 
       <div class="footer-links">
-
         <a href="https://github.com/hennriquee" target="_blank">
-          <i class='bx bxl-github'></i>
+          <i class="bx bxl-github"></i>
         </a>
-  
+
         <a
           href="https://wa.me/5534996560351?text=Olá,+me+interessei+em+seu+trabalho!"
           target="_blank"
@@ -508,8 +509,6 @@
           <i class="bx bxl-whatsapp"></i>
         </a>
       </div>
-
-
     </footer>
 
     <!-- SCROLL EFFECT -->
