--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
             <span>Provérbios</span> 18:15
           </p>
           <div class="home-btns" data-aos="fade-up" data-aos-duration="2200">
-            <a href="./doc/Curriculo.pdf" class="btn" download="Curriculo.pdf"
+            <a
+              href="./doc/Curriculo.pdf"
+              class="btn"
+              download="Curriculo.pdf"
+              target="_blank"
+              rel="external"
               >Download CV</a
             >
             <a href="#contact" class="contact-btn">Contato Info</a>
@@ -133,7 +138,7 @@
                     </div>
 
                     <div class="bar">
-                      <div id="html-bar"></div>
+                      <div class="bar-inner" id="html-bar"></div>
                     </div>
                     <p id="html-pct"></p>
                   </div>
@@ -145,7 +150,7 @@
                     </div>
 
                     <div class="bar">
-                      <div id="css-bar"></div>
+                      <div class="bar-inner" id="css-bar"></div>
                     </div>
                     <p id="css-pct"></p>
                   </div>
@@ -157,7 +162,7 @@
                     </div>
 
                     <div class="bar">
-                      <div id="js-bar"></div>
+                      <div class="bar-inner" id="js-bar"></div>
                     </div>
                     <p id="js-pct"></p>
                   </div>
@@ -169,7 +174,7 @@
                     </div>
 
                     <div class="bar">
-                      <div id="reactjs-bar"></div>
+                      <div class="bar-inner" id="reactjs-bar"></div>
                     </div>
                     <p id="reactjs-pct"></p>
                   </div>
@@ -181,7 +186,7 @@
                     </div>
 
                     <div class="bar">
-                      <div id="bootstrap-bar"></div>
+                      <div class="bar-inner" id="bootstrap-bar"></div>
                     </div>
                     <p id="bootstrap-pct"></p>
                   </div>
@@ -229,7 +234,7 @@
                     </div>
 
                     <div class="bar">
-                      <div id="sql-bar"></div>
+                      <div class="bar-inner" id="sql-bar"></div>
                     </div>
                     <p id="sql-pct"></p>
                   </div>
@@ -241,7 +246,7 @@
                     </div>
 
                     <div class="bar">
-                      <div id="excel-bar"></div>
+                      <div class="bar-inner" id="excel-bar"></div>
                     </div>
                     <p id="excel-pct"></p>
                   </div>
@@ -289,7 +294,7 @@
                     </div>
 
                     <div class="bar">
-                      <div id="pbi-bar"></div>
+                      <div class="bar-inner" id="pbi-bar"></div>
                     </div>
                     <p id="pbi-pct"></p>
                   </div>
@@ -447,11 +452,11 @@
             <span>Sistemas de Informação</span> na <span>Uniube</span>, com
             previsão de conclusão para dezembro de 2027. Trabalho como
             <span>Analista de Dados</span> na <span>Ubertec</span>, onde,
-            atendendo as três filiais, desenvolvo dashboards interativos em
-            <span>Power BI</span>, contribuindo nas tomadas de decisões
-            estratégicas da empresa. Sou uma pessoa <span>detalhista</span> e
-            que <span>ama aprender</span>, sempre buscando aprimorar meus
-            conhecimentos e habilidades.
+            atendendo as três filiais, desenvolvo e, conduzindo reuniões com a
+            alta gestão, apresento dashboards em <span>Power BI</span>,
+            contribuindo nas tomadas de decisões estratégicas da empresa. Sou
+            uma pessoa <span>detalhista</span> e que <span>ama aprender</span>,
+            sempre buscando aprimorar meus conhecimentos e habilidades.
           </p>
         </div>
       </div>
@@ -488,7 +493,7 @@
         <button type="submit" class="btn">Enviar</button>
       </form>
     </section>
-    <!-- contact section -->
+    <!-- /contact section -->
 
     <footer>
       <div class="footer-title">
