--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-..."
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <link rel="stylesheet" href="index.css" />
 
@@ -110,15 +117,15 @@
             <div class="skills-box-front">
               <div class="skills-box-front-content">
                 <div class="skills-box-front-title">
-                  <i class="bx bx-code-alt"></i>
+                  <i class="bx bx-pen"></i>
 
-                  <h3>Web Development</h3>
+                  <h3>Front End</h3>
                 </div>
 
                 <div class="skills-box-front-text">
                   <p>
-                    Desenvolvimento e manutenção de sites e aplicações web,
-                    potencializando sua performance e alcance.
+                    Desenvolvimento e manutenção de interfaces web, assegurando
+                    a usabilidade e responsividade.
                   </p>
                 </div>
               </div>
@@ -131,64 +138,35 @@
                 <h3>Conhecimentos</h3>
 
                 <div class="skills-items">
-                  <div class="skill-item html-item">
-                    <div class="skill-title">
-                      <h5>HTML</h5>
-                      <i class="bx bxl-html5"></i>
-                    </div>
-
-                    <div class="bar">
-                      <div class="bar-inner" id="html-bar"></div>
-                    </div>
-                    <p id="html-pct"></p>
+                  <div class="skill-item">
+                    <h5><li>HTML</li></h5>
+                    <i class="fa-brands fa-html5"></i>
                   </div>
 
-                  <div class="skill-item css-item">
-                    <div class="skill-title">
-                      <h5>CSS</h5>
-                      <i class="bx bxl-css3"></i>
-                    </div>
-
-                    <div class="bar">
-                      <div class="bar-inner" id="css-bar"></div>
-                    </div>
-                    <p id="css-pct"></p>
+                  <div class="skill-item">
+                    <h5><li>CSS</li></h5>
+                    <i class="fa-brands fa-css3-alt"></i>
                   </div>
 
-                  <div class="skill-item js-item">
-                    <div class="skill-title">
-                      <h5>Javascript</h5>
-                      <i class="bx bxl-javascript"></i>
-                    </div>
-
-                    <div class="bar">
-                      <div class="bar-inner" id="js-bar"></div>
-                    </div>
-                    <p id="js-pct"></p>
+                  <div class="skill-item">
+                    <h5><li>Javascript</li></h5>
+                    <i class="fa-brands fa-js"></i>
                   </div>
 
-                  <div class="skill-item reactjs-item">
-                    <div class="skill-title">
-                      <h5>React.js</h5>
-                      <i class="bx bxl-react"></i>
-                    </div>
-
-                    <div class="bar">
-                      <div class="bar-inner" id="reactjs-bar"></div>
-                    </div>
-                    <p id="reactjs-pct"></p>
+                  <div class="skill-item">
+                    <h5><li>React.js</li></h5>
+                    <i class="fa-brands fa-react"></i>
                   </div>
 
-                  <div class="skill-item bootstrap-item">
-                    <div class="skill-title">
-                      <h5>Material UI, Bootstrap</h5>
-                      <i class="bx bxl-bootstrap"></i>
-                    </div>
+                  <div class="skill-item">
+                    <h5><li>Material UI</li></h5>
 
-                    <div class="bar">
-                      <div class="bar-inner" id="bootstrap-bar"></div>
-                    </div>
-                    <p id="bootstrap-pct"></p>
+                    <i class="fa-brands fa-uikit"></i>
+                  </div>
+
+                  <div class="skill-item">
+                    <h5><li>Bootstrap</li></h5>
+                    <i class="fa-brands fa-bootstrap"></i>
                   </div>
                 </div>
               </div>
@@ -197,7 +175,6 @@
             </div>
           </div>
         </div>
-
         <div
           class="skills-container"
           data-aos="fade-up"
@@ -207,14 +184,15 @@
             <div class="skills-box-front">
               <div class="skills-box-front-content">
                 <div class="skills-box-front-title">
-                  <i class="bx bx-data"></i>
-                  <h3>Data Bases</h3>
+                  <i class="bx bx-code-curly"></i>
+
+                  <h3>Back End</h3>
                 </div>
 
                 <div class="skills-box-front-text">
                   <p>
-                    Gerenciamento e otimização de bancos de dados, garantindo a
-                    performance e a sua segurança.
+                    Desenvolvimento e manutenção de Backend de apps, garantindo
+                    a sua performance e segurança.
                   </p>
                 </div>
               </div>
@@ -227,28 +205,14 @@
                 <h3>Conhecimentos</h3>
 
                 <div class="skills-items">
-                  <div class="skill-item sql-item">
-                    <div class="skill-title">
-                      <h5>SQL</h5>
-                      <i class="bx bxs-data"></i>
-                    </div>
-
-                    <div class="bar">
-                      <div class="bar-inner" id="sql-bar"></div>
-                    </div>
-                    <p id="sql-pct"></p>
+                  <div class="skill-item">
+                    <h5><li>Java</li></h5>
+                    <i class="fa-brands fa-java"></i>
                   </div>
 
-                  <div class="skill-item excel-item">
-                    <div class="skill-title">
-                      <h5>Excel</h5>
-                      <i class="bx bxl-microsoft"></i>
-                    </div>
-
-                    <div class="bar">
-                      <div class="bar-inner" id="excel-bar"></div>
-                    </div>
-                    <p id="excel-pct"></p>
+                  <div class="skill-item">
+                    <h5><li>Python</li></h5>
+                    <i class="fa-brands fa-python"></i>
                   </div>
                 </div>
               </div>
@@ -267,14 +231,14 @@
             <div class="skills-box-front">
               <div class="skills-box-front-content">
                 <div class="skills-box-front-title">
-                  <i class="bx bx-line-chart"></i>
-                  <h3>Business Intelligence</h3>
+                  <i class="bx bx-data"></i>
+                  <h3>Data Bases</h3>
                 </div>
 
                 <div class="skills-box-front-text">
                   <p>
-                    Desenvolvimento e análise de informações e processos para
-                    BI's, potencializando seu desempenho.
+                    Gerenciamento e otimização de bancos de dados, assegurando
+                    desempenho e proteção.
                   </p>
                 </div>
               </div>
@@ -287,16 +251,160 @@
                 <h3>Conhecimentos</h3>
 
                 <div class="skills-items">
-                  <div class="skill-item pbi-item">
-                    <div class="skill-title">
-                      <h5>Power BI</h5>
-                      <i class="bx bxs-bar-chart-square"></i>
-                    </div>
+                  <div class="skill-item">
+                    <h5><li>SQL Server</li></h5>
+                    <i class="bx bxs-data"></i>
+                  </div>
 
-                    <div class="bar">
-                      <div class="bar-inner" id="pbi-bar"></div>
-                    </div>
-                    <p id="pbi-pct"></p>
+                  <div class="skill-item">
+                    <h5><li>MongoDB</li></h5>
+                    <i class="bx bxl-mongodb"></i>
+                  </div>
+
+                  <div class="skill-item">
+                    <h5><li>MySQL</li></h5>
+                    <i class="bx bxs-data"></i>
+                  </div>
+
+                  <div class="skill-item">
+                    <h5><li>Oracle</li></h5>
+                    <i class="fa-solid fa-o"></i>
+                  </div>
+                </div>
+              </div>
+
+              <a class="btn"> Retornar </a>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="skills-container"
+          data-aos="fade-up"
+          data-aos-duration="1000"
+        >
+          <div class="skills-box">
+            <div class="skills-box-front">
+              <div class="skills-box-front-content">
+                <div class="skills-box-front-title">
+                  <i class="bx bx-laptop"></i>
+                  <h3>Automation Scripting</h3>
+                </div>
+
+                <div class="skills-box-front-text">
+                  <p>
+                    Automação de tarefas repetitivas e manipulação de arquivos
+                    garantindo o aproveitamento operacional.
+                  </p>
+                </div>
+              </div>
+
+              <a class="btn"> Saiba mais </a>
+            </div>
+
+            <div class="skills-box-back">
+              <div class="skills-box-back-content">
+                <h3>Conhecimentos</h3>
+
+                <div class="skills-items">
+                  <div class="skill-item">
+                    <h5><li>Selenium</li></h5>
+                    <i class="bx bxs-check-square"></i>
+                  </div>
+
+                  <div class="skill-item">
+                    <h5><li>PyAutoGUI</li></h5>
+                    <i class="bx bxs-bot"></i>
+                  </div>
+                </div>
+              </div>
+
+              <a class="btn"> Retornar </a>
+            </div>
+          </div>
+        </div>
+        <div
+          class="skills-container"
+          data-aos="fade-up"
+          data-aos-duration="1300"
+        >
+          <div class="skills-box">
+            <div class="skills-box-front">
+              <div class="skills-box-front-content">
+                <div class="skills-box-front-title">
+                  <i class="bx bx-line-chart"></i>
+                  <h3>Data Analytics</h3>
+                </div>
+
+                <div class="skills-box-front-text">
+                  <p>
+                    Desenvolvimento e análise de informações e processos para
+                    Business Intelligence, potencializando seu desempenho.
+                  </p>
+                </div>
+              </div>
+
+              <a class="btn"> Saiba mais </a>
+            </div>
+
+            <div class="skills-box-back">
+              <div class="skills-box-back-content">
+                <h3>Conhecimentos</h3>
+
+                <div class="skills-items">
+                  <div class="skill-item">
+                    <h5><li>Power BI</li></h5>
+                    <i class="fa-solid fa-chart-simple"></i>
+                  </div>
+
+                  <div class="skill-item">
+                    <h5><li>Excel</li></h5>
+                    <i class="fa-solid fa-file-excel"></i>
+                  </div>
+
+                  <div class="skill-item">
+                    <h5><li>Pandas</li></h5>
+                    <i class="fa-solid fa-paw"></i>
+                  </div>
+                </div>
+              </div>
+
+              <a class="btn"> Retornar </a>
+            </div>
+          </div>
+        </div>
+        <div
+          class="skills-container"
+          data-aos="fade-up"
+          data-aos-duration="1600"
+        >
+          <div class="skills-box">
+            <div class="skills-box-front">
+              <div class="skills-box-front-content">
+                <div class="skills-box-front-title">
+                  <i class="bx bx-book-content"></i>
+                  <h3>Architecture & Testing</h3>
+                </div>
+
+                <div class="skills-box-front-text">
+                  <p>
+                    Arquitetura e estratégias de testes em software, garantindo
+                    robustez, segurança e qualidade do código.
+                  </p>
+                </div>
+              </div>
+
+              <a class="btn"> Saiba mais </a>
+            </div>
+
+            <div class="skills-box-back">
+              <div class="skills-box-back-content">
+                <h3>Conhecimentos</h3>
+
+                <div class="skills-items">
+                  <div class="skill-item">
+                    <h5><li>TDD</li></h5>
+                    <i class="fa-solid fa-bug"></i>
                   </div>
                 </div>
               </div>
