--- a/index.html
+++ b/index.html
@@ -139,33 +139,33 @@
 
                 <div class="skills-items">
                   <div class="skill-item">
-                    <h5><li>HTML</li></h5>
+                    <h5>HTML</h5>
                     <i class="fa-brands fa-html5"></i>
                   </div>
 
                   <div class="skill-item">
-                    <h5><li>CSS</li></h5>
+                    <h5>CSS</h5>
                     <i class="fa-brands fa-css3-alt"></i>
                   </div>
 
                   <div class="skill-item">
-                    <h5><li>Javascript</li></h5>
+                    <h5>Javascript</h5>
                     <i class="fa-brands fa-js"></i>
                   </div>
 
                   <div class="skill-item">
-                    <h5><li>React.js</li></h5>
+                    <h5>React.js</h5>
                     <i class="fa-brands fa-react"></i>
                   </div>
 
                   <div class="skill-item">
-                    <h5><li>Material UI</li></h5>
+                    <h5>Material UI</h5>
 
                     <i class="fa-brands fa-uikit"></i>
                   </div>
 
                   <div class="skill-item">
-                    <h5><li>Bootstrap</li></h5>
+                    <h5>Bootstrap</h5>
                     <i class="fa-brands fa-bootstrap"></i>
                   </div>
                 </div>
@@ -206,12 +206,12 @@
 
                 <div class="skills-items">
                   <div class="skill-item">
-                    <h5><li>Java</li></h5>
+                    <h5>Java</h5>
                     <i class="fa-brands fa-java"></i>
                   </div>
 
                   <div class="skill-item">
-                    <h5><li>Python</li></h5>
+                    <h5>Python</h5>
                     <i class="fa-brands fa-python"></i>
                   </div>
                 </div>
@@ -252,22 +252,22 @@
 
                 <div class="skills-items">
                   <div class="skill-item">
-                    <h5><li>SQL Server</li></h5>
+                    <h5>SQL Server</h5>
                     <i class="bx bxs-data"></i>
                   </div>
 
                   <div class="skill-item">
-                    <h5><li>MongoDB</li></h5>
+                    <h5>MongoDB</h5>
                     <i class="bx bxl-mongodb"></i>
                   </div>
 
                   <div class="skill-item">
-                    <h5><li>MySQL</li></h5>
+                    <h5>MySQL</h5>
                     <i class="bx bxs-data"></i>
                   </div>
 
                   <div class="skill-item">
-                    <h5><li>Oracle</li></h5>
+                    <h5>Oracle</h5>
                     <i class="fa-solid fa-o"></i>
                   </div>
                 </div>
@@ -308,12 +308,12 @@
 
                 <div class="skills-items">
                   <div class="skill-item">
-                    <h5><li>Selenium</li></h5>
+                    <h5>Selenium</h5>
                     <i class="bx bxs-check-square"></i>
                   </div>
 
                   <div class="skill-item">
-                    <h5><li>PyAutoGUI</li></h5>
+                    <h5>PyAutoGUI</h5>
                     <i class="bx bxs-bot"></i>
                   </div>
                 </div>
@@ -353,18 +353,18 @@
 
                 <div class="skills-items">
                   <div class="skill-item">
-                    <h5><li>Power BI</li></h5>
-                    <i class="fa-solid fa-chart-simple"></i>
+                    <h5>Power BI</h5>
+                    <i class="bx bxs-bar-chart-alt-2"></i>
                   </div>
 
                   <div class="skill-item">
-                    <h5><li>Excel</li></h5>
+                    <h5>Excel</h5>
                     <i class="fa-solid fa-file-excel"></i>
                   </div>
 
                   <div class="skill-item">
-                    <h5><li>Pandas</li></h5>
-                    <i class="fa-solid fa-paw"></i>
+                    <h5>Pandas</h5>
+                    <i class="bx bx-table"></i>
                   </div>
                 </div>
               </div>
@@ -403,8 +403,8 @@
 
                 <div class="skills-items">
                   <div class="skill-item">
-                    <h5><li>TDD</li></h5>
-                    <i class="fa-solid fa-bug"></i>
+                    <h5>TDD</h5>
+                    <i class="bx bxs-bug"></i>
                   </div>
                 </div>
               </div>
